# autograd_cpp

./: .clangd  .gitignore  CMakeLists.txt  ExpressionNodeTree.cpp  done_today.md  main.cpp  must_remember.md  startwith.md  tensor.cpp  tensor.hpp  todo.md
gradc/: autograd.hpp  gradc.hpp  graph.hpp  graph_fwd.hpp  node.hpp  tensor.hpp
gradc/backend/: dispatcher.hpp  op_types.hpp
gradc/backend/cpu/: apply.hpp  cpu_apply.hpp  cpu_memory_pool.hpp
gradc/backend/cuda/: cuda_memory_pool.hpp  cuda_test.cu  kernels.cu  kernels.hpp  memory_pool.hpp
gradc/core/: print.hpp  storage.hpp  tensor.hpp  tensor_state.hpp  types.hpp
gradc/core/detail/: shape_inference.hpp  tensor_detail.hpp  tensor_lob_alloc.hpp  tensor_lob_view.hpp  tensor_lobotomized.hpp
gradc/frontend/: tensor_indexing.hpp  tensor_math.hpp  tensor_memory.hpp
gradc/graph/: autograd_engine.hpp  node.hpp
gradc/graph/nodes/: activation_nodes.hpp  math_nodes.hpp  memory_nodes.hpp  reduce_nodes.hpp  unary_nodes.hpp  view_nodes.hpp
gradc/impl/: autograd.hpp  tensor_indexing.hpp  tensor_lifecycle.hpp  tensor_math.hpp  tensor_neural.hpp  tensor_reductions.hpp  tensor_shape.hpp  tensor_utils.hpp
gradc/ops/: tensor_activation.hpp  tensor_indexing.hpp  tensor_lifecycle.hpp  tensor_math.hpp  tensor_memory.hpp  tensor_reduction.hpp  tensor_shape.hpp
preparations/: expression_tree.cpp  matrix_2d.cpp  my_string.cpp
